# cognitive-search-vector-pr

demo-python/: pyproject.toml
demo-python/code/: azure-search-vector-python-sample.ipynb
