[tool.poetry]
name = "demo-python"
version = "0.1.0"
description = ""
authors = ["GGuerraReply <133228566+GGuerraReply@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "demo_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[[tool.poetry.source]]
name = "index-url"
url = "https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-f"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
